maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:16: error: not found: value keeHandOnSideWall
      keeHandOnSideWall()
      ^